# kaggle-5days-vibe-coding

./: AGENTS.md  README.md
olist-ops-agent/: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  SUBMISSION_GUIDE.md  agents-cli-manifest.yaml  kaggle_notebook.ipynb  kaggle_writeup_draft.md  open_design_cover_brief.md  pyproject.toml  requirements.txt
olist-ops-agent/.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
olist-ops-agent/olist_agent/: __init__.py  agent.py
olist-ops-agent/olist_ops/: __init__.py  agent.py  chart_tool.py  fast_api_app.py  mcp_agent.py  mcp_server.py  mcp_toolsets.py  olist_metrics.py  skill_registry.py  tools.py
olist-ops-agent/olist_ops/app_utils/: telemetry.py  typing.py
olist-ops-agent/olist_ops/sub_agents/: __init__.py  business_intelligence.py  common.py  customer_experience.py  executive_briefing.py  finance_payments.py  fulfillment_logistics.py  seller_management.py  specialists.py
olist-ops-agent/scripts/: bigquery_upload.py
olist-ops-agent/skills/executive-briefing/: SKILL.md
olist-ops-agent/skills/freight-lane-analysis/: SKILL.md
olist-ops-agent/skills/seller-risk-audit/: SKILL.md
olist-ops-agent/tests/: orchestrator_routing_check.py  test_chart_tool.py
olist-ops-agent/tests/eval/: eval_config.json  eval_config.yaml  generate_evalset.py  olist_metrics.py  orchestrator_routing_report.json
olist-ops-agent/tests/integration/: run_forecast_test.py  run_question_loop.py  test_agent.py  test_server_e2e.py
olist-ops-agent/tests/load_test/: README.md  load_test.py
(+9 files in other folders)
