[project]
name = "olist-ops-agent"
version = "0.1.0"
description = "Olist Ecommerce Analytics Agent (Google ADK 2.3 multi-agent team over BigQuery)"
authors = [
    {name = "Khang", email = "khangnd202@gmail.com"},
]
requires-python = ">=3.11,<3.14"

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-bigquery>=3.20.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "db-dtypes>=1.2.0,<2.0.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "mcp>=1.0.0",
    "google-cloud-dataplex>=2.20.0",
    "matplotlib>=3.11.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.3.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olist_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
